--- a/app/main.css
+++ b/app/main.css
@@ -12,3 +12,47 @@ body {
   background-color: #45ceef;
   -webkit-animation: pulse 5s infinite alternate;
 }
+
+.task-list {
+  margin: 0.5em;
+  padding-left: 0;
+
+  max-width: 10em;
+  list-style: none;
+}
+
+.task-list-item {
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+
+  background-color: #fdfdfd;
+  box-shadow: 0 0 0.3em 0.03em rgba(0, 0, 0, 0.3);
+}
+
+.task-list-item:hover {
+  box-shadow: 0 0 0.3em 0.03em rgba(0, 0, 0, 0.7);
+
+  transition: 0.6s;
+}
+
+.task-list-item .task {
+  /* force to use inline-block so that it gets minimum height */
+  display: inline-block;
+}
+
+.task-list-item .remove {
+  float: right;
+
+  padding: 0;
+
+  background-color: #fdfdfd;
+  border: none;
+
+  cursor: pointer;
+
+  visibility: hidden;
+}
+
+.task-list-item:hover .remove {
+  visibility: visible;
+}
